stream.toList not available in GWT emulation